# rust-game

./: .gitignore  34ty.pixil  Cargo.toml  README.md  constants.rs  entity_graphic.rs  player_character.rs  psudocode  server_net.rs
assets/atlas/: draw-pile.ora
client/: Cargo.toml
client/src/: client_info_object.rs  constants.rs  entity_graphic.rs  entity_type.rs  global_variables.rs  graphics_entity.rs  graphics_math.rs  graphics_procedure.rs  main.rs  main_character_singleton.rs  net.rs  server_update_object.rs
concept/: character.txt  map.txt
concept/Enemy Concepts/Bosses/Mountain Troll/: info.txt
netlib/: Cargo.toml
netlib/src/: entity_component_system.rs  lib.rs  system_time.rs
reference/: inspiration.txt  psudocode
server/: Cargo.toml
server/src/: constants.rs  enemy_character.rs  entity_component_system.rs  entity_factory.rs  environment_singleton.rs  game_entity_factory.rs  game_world.rs  global_variables.rs  main.rs  net.rs  player_character.rs  player_projectile.rs  spell.rs
src/: character.rs  character_factory.rs  chunks.rs  enemy_character.rs  environment.rs  environment_singleton.rs  global_variables.rs  graphics_math.rs  graphics_procedure.rs  main.rs  player_character.rs  player_projectile.rs  playercharacter.rs  tiles.rs
