[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
macroquad = "0.4.4"
serde = { version = "1.0.194", features = ["derive"] }
uuid = {version = "1.6.1", features = ["v4", "fast-rng", "serde"]}
netlib = { path = "../netlib/" }
