[package]
name = "netlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.4"
serde = { version = "1.0.194", features = ["derive"] }
uuid = {version = "1.6.1", features = ["v4", "fast-rng", "serde"]}
